# drill

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  README.md  build.ninja
doc/: intro.md
sound/: index.html
src/: audioxx.h  cam.cc  cam.h  classification.cc  classification.h  debug.h  event.h  main.cc  monitor.h  queue.h  sound.cc  sound.h
